test_yuriiq/catalog/language/english/blog/article.php
<?php

// text
$_['text_error']	= 'Article not found!';
$_['text_write']	= 'Write a review';
$_['text_wait']	= 'Please Wait!';
$_['text_success']	= 'Thank you for your review. It has been submitted to the webmaster for approval.';
$_['text_reviews']	= '%s reviews';
$_['text_on']	= ' on ';
$_['text_no_reviews']	= 'There are no reviews for this article.';
$_['text_note']	= '<span style="color: #FF0000;">Note:</span> Reviews are published without pre-moderation. Be polite, please!';

// error
$_['error_captcha']	= 'Warning: Verification code does not match the image!';
$_['error_text']	= 'Warning: Review Text must be between 25 and 1000 characters!';
$_['error_rating']	= 'Warning: Please select a review rating!';
$_['error_name']	= 'Warning: Review Name must be between 3 and 25 characters!';

// admin
$_['admin_author']	= 'Management response';

// entry
$_['entry_captcha']	= 'Enter the code in the box below:';
$_['entry_name']	= 'Your Name:';
$_['entry_rating']	= 'Rating:';
$_['entry_review']	= 'Your Review:';
$_['entry_bad']	= 'Bad';
$_['entry_good']	= 'Good';

// tab
$_['tab_related']	= 'Related Articles';
$_['tab_related_product']	= 'Related Products';
?>